--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.3",
     "typescript": "*",
+    "unplugin-auto-import": "^0.13.0",
     "unplugin-vue-components": "^0.23.0",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
