--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "unplugin-auto-import": "^0.13.0",
     "unplugin-vue-components": "^0.23.0",
     "vite": "^4.0.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.11"
   }
 }
